Renamed home.html to Index.html - moved @media from style to responsive.css. Tried to fix modal window image to be smaller in order to see the X on smaller screen devices

--- a/css/responsive.css
+++ b/css/responsive.css
@@ -1,12 +1,5 @@
 @media all and (max-width: 920px) {
-    /*.business { display:block;}*/
-    /*.learn-more {*/
-    /*display: block;*/
-    /*margin-bottom: 25px;*/
-    /*}*/
-    /*.business article {text-align:center;}*/
-    /*article p { max-width:100%; }*/
-    /*main h2 { font-size: 1.4em; }*/
+
     body {
         font-size: 12px;
     }
@@ -73,5 +66,10 @@
 
         margin: 10px;
         text-align: center;
+    }
+}
+@media only screen and (max-width: 700px) {
+    .modal-content {
+        width: 90%;
     }
 }
