--- a/css/style.css
+++ b/css/style.css
@@ -628,12 +628,13 @@ img#modal-image {
 
 /* Modal Content (Image) */
 .modal-content {
-    margin: auto;
     display: block;
-    width: 80%;
     max-width: 700px;
-    animation-name: zoom;
-    animation-duration: 0.6s;
+    position: relative;
+    margin: auto;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+    animation-name: animatetop;
+    animation-duration: 0.4s
 }
 
 /* Caption of Modal Image (Image Text) - Same Width as the Image */
@@ -688,28 +689,10 @@ img#modal-image {
 }
 
 /* 100% Image Width on Smaller Screens */
-@media only screen and (max-width: 700px) {
-    .modal-content {
-        width: 100%;
-    }
-}
 
 
 /* Modal Content */
-.modal-content {
 
-    position: relative;
-    background-color: #fefefe;
-    margin: auto;
-    padding: 0;
-
-    width: 80%;
-    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
-    -webkit-animation-name: animatetop;
-    -webkit-animation-duration: 0.4s;
-    animation-name: animatetop;
-    animation-duration: 0.4s
-}
 
 /* Add Animation */
 @-webkit-keyframes animatetop {
